[package]
name = "rmosh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test_gc_size = []
debug_log_vm = []
debug_log_gc = []

[dependencies]
bumpalo = { version = "3.11.1" }
mimalloc = { version = "0.1.27", default-features = false }
enum-display-derive = "0.1.1"
regex = "1"