[package]
name = "rmosh"
version = "0.0.7"
authors = ["higepon@gmail.com>"]
edition = "2021"
description = "R6RS & R7RS Scheme Interpreter"
license = "MIT"
repository = "https://github.com/higepon/mosh/tree/master/rmosh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test_gc_size = []
debug_log_vm = []
debug_log_gc = []

[build-dependencies]
lalrpop = "0.19.7"

[dependencies]
rust-embed="6.6.1"
bumpalo = { version = "3.11.1" }
mimalloc = { version = "0.1.27", default-features = false }
enum-display-derive = "0.1.1"
rand = "0.6"
regex = "1"
num-derive = "0.3"
num-traits = "0.2"
lalrpop-util = { version = "^0.19", features = ["lexer"] }
ordered-float = { version = "3.0", default-features = false }
num-bigint = "0.4"
num-rational = "0.4"
clap = { version = "4.0", features = ["derive"] }
byteorder = "1"
once_cell = "1.5.2"